# bizytrd-sdk

./: .gitignore  pyproject.toml
bizytrd_sdk/: __init__.py  client.py  config.py  exceptions.py  http_utils.py  task.py  upload.py
bizytrd_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bizytrd_sdk/adapters/: __init__.py  dsl.py  engine.py  transforms.py  utils.py  validators.py
